Fixin' LeaveEmailBeforePayingPopup.js style problem on Safari (4)

--- a/book-store-frontend/src/components/leave-email-before-paying-popup/LeaveEmailBeforePayingPopup.css
+++ b/book-store-frontend/src/components/leave-email-before-paying-popup/LeaveEmailBeforePayingPopup.css
@@ -8,10 +8,6 @@
 }
 
 .leave-email-before-paying-popup-subcontainer {
-    position: fixed;
-    bottom: 40%;
-    left: 0;
-    right: 0;
     border-radius: 20px;
 }
 
